Added async font loading; added compressed layout for HTML compression; added new configs to exclude development files; added autoprefixer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 // Add a script element as a child of the body
 function downloadJSOnload() {
 var element = document.createElement('script');
-element.src = '/assets/js/main.js';
+element.src = '/assets/js/main.min.js';
 document.body.appendChild(element);
 }
 // Check for browser support of event handling capability
@@ -29,5 +29,21 @@ window.attachEvent("onload", downloadJSOnload);
 } else {
 window.onload = downloadJSOnload;
 }
+</script>
+
+
+<script type="text/javascript">
+WebFontConfig = {
+  google: { families: [ 'Roboto+Condensed:300,400:latin' ] }
+};
+(function() {
+ var wf = document.createElement('script');
+ wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+         '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+ wf.type = 'text/javascript';
+ wf.async = 'true';
+ var s = document.getElementsByTagName('script')[0];
+ s.parentNode.insertBefore(wf, s);
+ })(); 
 </script>
 </html>
