--- a/assets/css/core/_vars.scss
+++ b/assets/css/core/_vars.scss
@@ -1,9 +1,9 @@
 /* Fonts */
-$font--sans: 'Roboto', Arial, sans-serif; 
-$font--serif: 'Roboto', Arial, sans-serif;
+$font--sans: 'Roboto Condensed', sans-serif; 
+$font--serif: $font--sans; 
 
 $font-weight--light: 300;
-$font-weight--medium: 500;
+$font-weight--medium: 400;
 
 
 /* Colors */
