Test; Changed meta color for Android 5.0+

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="front-end,web,dev,development,frankfurt,germany,blog,writing,ui,ux,beginner,sass,scss,html,css,javascript">
     <meta name="viewport" content="width=device-width">
     <!-- This gives Android 5.0 users some neat colors to their Chrome tabs in the multi-task window! -->
-    <meta name="theme-color" content="#C6FF00">
+    <meta name="theme-color" content="#E91E63">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@_kevinatari">
