--- a/assets/css/modules/_article.scss
+++ b/assets/css/modules/_article.scss
@@ -45,3 +45,14 @@ p code {
     }
 
 }
+
+
+blockquote {
+  display: block;
+  font-style: italic;
+  font-size: 1.2rem;
+  background: #E0E0E0;
+  color: #616161;
+  padding: 1rem 2rem;
+  margin: 1rem 0 2rem 0;  
+}
