Added personal posts to about page; fixed issue with z-index; removed setInterval and added requestAnimationFrame instead; Removed off-screen element; added new title and keywords.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,7 @@
         "core/helper",
         "core/typography";
 
-@import "objects/off-screen",
-				"objects/lists";
+@import "objects/lists";
 
 @import "includes/syntax", /* syntax highlight styles*/
         "includes/bullgrid"; /* grid system */
