--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,21 +2,36 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks</title>
-    <meta name="description" content="Front-End Developer from Frankfurt, Germany. I write about CSS, HTML, JS and UI/X.">
-    <meta name="keywords" content="front-end,web,dev,development,frankfurt,germany,blog,writing,ui,ux,beginner,sass,scss,html,css,javascript">
+    <title>{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel
+    &ndash; Front-End Developer</title>
+    <meta name="description" content="Front-End Developer from Frankfurt,
+    Germany. I write about CSS, Sass, HTML and JavaScript. Sometimes I like to
+    take photos.">
+    <meta name="keywords" content="Front-End, Developer, Sass, JavaScript,
+    Germany, Frankfurt, 
+    {% if page.tags %}
+    {% for tag in page.tags %}
+      {{tag}}{% if forloop.last %}{% else %}, {% endif %}
+    {% endfor %}
+    {% endif %}
+    ">
     <meta name="viewport" content="width=device-width">
-    <!-- This gives Android 5.0 users some neat colors to their Chrome tabs in the multi-task window! -->
+    <!-- This gives Android 5.0 users some neat colors to their Chrome tabs in
+    the multi-task window! See
+    http://kevingimbel.com/snippet-theme-color-android-5-0/ -->
     <meta name="theme-color" content="#E91E63">
 
+    <!-- Twitter Card integration (preview inside supported Apps -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@_kevinatari">
     <meta name="twitter:domain" content="http://kevingimbel.com">
-    <meta name="twitter:title" content="{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks">
+    <meta name="twitter:title" content="{% if page.title %} {{ page.title }}
+    &ndash; {% endif %} kevingimbel.com">
     <meta name="twitter:description" content="{{ page.excerpt | strip_html}} (Read more...)">
     <!--
     I use this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10
     -->
+
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link rel="dns-prefetch" href="http://fonts.googleapis.com">
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
