--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,14 +1,14 @@
 <div class="wrap">
 {% if page.id %}
   
-  <h1 class="off-screen site__header--headline">{{ page.title }}</h1>
+  <h1 class="site__header--headline">{{ page.title }}</h1>
 
 {% elsif page.layout == 'guide' %}
 
- <h1 class="off-screen site__header--headline">{{ page.title }}</h1>
+ <h1 class="site__header--headline">{{ page.title }}</h1>
 
 {% else %}
-<h1 class="off-screen  site__header--headline">Hi, I am Kevin</h1>
+<h1 class="site__header--headline">Hi, I am Kevin</h1>
     
     <h3 class="small-screen-only">a Front-End Developer from Frankfurt, Germany. You can find out more <a href="/about">about me here</a>.</h3>
     
