--- a/assets/css/modules/_article.scss
+++ b/assets/css/modules/_article.scss
@@ -10,6 +10,11 @@
     }
 }
 
+.article--home {
+    border-bottom: 1px solid #ddd;
+    padding: 0 2rem 2rem 2rem; 
+}
+
 p code {
   background: #cfd8dc;
   padding: .125em .5em;
@@ -38,7 +43,7 @@ p code {
 .category {
    padding: 0 1.25rem;
    display: inline-block;
-    
+   margin-left: 1.25rem; 
     &.coding {
       color: #fff;
       background: $color--contrast;  
@@ -55,4 +60,16 @@ blockquote {
   color: #616161;
   padding: 1rem 2rem;
   margin: 1rem 0 2rem 0;  
+}
+
+
+
+
+/*
+ * Snippets
+ */
+
+.snippet--list {
+  padding: 1.75rem 2rem 1rem 2rem;
+  border-top: 1px solid #ddd;
 }
