--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
     I use this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10
     -->
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/dest/css/style.css">
     <link rel="dns-prefetch" href="http://fonts.googleapis.com">
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
