--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -25,7 +25,7 @@ layout: compress
 	</section>
 	
 	<section class="g one-quarter medium-one-whole">
-		{% include events.html %}
-	</section>
+	  {% include sidebar.html %}
+  </section>
 </main>
 {% include footer.html %}
