--- a/src/sass/core/_vars.scss
+++ b/src/sass/core/_vars.scss
@@ -11,3 +11,6 @@ $font-weight--medium: 400;
 $color--main: #1976D2;
 $color--contrast: #E91E63; 
 $color--accent: #263238;
+
+/* Paddding */
+$padding--default: 1.25rem;
