--- a/src/sass/modules/_boxes.scss
+++ b/src/sass/modules/_boxes.scss
@@ -12,3 +12,11 @@
     padding: 0 20px;
   }
 }
+
+.o-divider--small {
+  margin: 1rem 0;
+  border: none;
+  background: #ddd;
+  height: 1px;
+  width: 100%;  
+}
