Fixed link being written in markdown instead of HTML.

--- a/_layouts/all-snippets.html
+++ b/_layouts/all-snippets.html
@@ -7,9 +7,10 @@ layout: compress
     <h3>Snippets</h3>
     <p>Below is an ongoing collection of small snippets that I've found through my day-to-day working
     life. You can add to the collection by sending a pull request or by opening 
-    [an issue on GitHub](https://github.com/kevingimbel/kevingimbel.github.io/issues)</p>
+    <a href="https://github.com/kevingimbel/kevingimbel.github.io/issues" title="Open new Issue">an
+    issue on GitHub</a>.
     
-    <p>All snippets are free to republish. Mentions are always appreciated but not required.</p>
+    <p>All snippets are free to republish. Backlinks are always appreciated but not required.</p>
 
     {% for item in site.snippets %}
       <article class="snippet--list">
