Fixed JS path in site and gulpfile.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
 <script type="text/javascript">
 function downloadJSOnload() {
 var element = document.createElement('script');
-element.src = '/src/js/main.js';
+element.src = '/dest/js/main.min.js';
 document.body.appendChild(element);
 }
 
