Added rel=me attributes for IndieWeb Auth.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,14 @@
     <div class="wrap">
         <div class="gw">
             <div class="g three-quarters  small-one-whole">
-            Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>. Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>, some files at <a href="http://uberspace.de">Uberspace.de</a>. 
+            Build with <a href="http://sass-lang.com">Sass</a>, <a href="http://jekyllrb.com">Jekyll</a> and <span class="love">&hearts;</span>. 
+            Hosted on <a href="http://github.com/kevingimbel/kevingimbel.github.io">Github</a>, some files at <a href="http://uberspace.de">Uberspace.de</a>. 
             <a href="/imprint">Imprint</a>
         </div>
 
         <div class="g one-quarter small-one-whole">
-            <a href="https://twitter.com/_kevinatari" >@_kevinatari</a>
+            <a href="https://twitter.com/_kevinatari" rel="me">@_kevinatari</a> |
+            <a href="https://github.com/kevingimbel" rel="me">GitHub</a>
         </div>
         </div>
     </div> <!-- wrap -->
